# shannon-framework

./: .coverage  .dockerignore  .gitignore  .shannon-analysis-checkpoint.json  AGENT2_MISSION_COMPLETE.md  AGENT3_SITREP_FINAL.md  AGENT3_VALIDATION_REPORT.md  AGENT4_COMPLETE.md  AGENT4_SITREP_FINAL.md  AGENT6_MISSION_COMPLETE.md  AGENT6_SITREP_COMPLETE.md  AGENT8_SITREP_MCP_SKILLS_MAPPING.md  AGENTC_SITREP_SKILL_ORCHESTRATION.md  AGENT_D_SITREP_META_SKILLS.md  AGENT_E_SITREP_MCP_SKILL_INTEGRATION_MECHANICS.md  AGENT_SDK_USAGE_AUDIT.md  AGENT_TRACKING_ARCHITECTURE_ANALYSIS.md  ANALYSIS_COMPLETE.txt  ANALYTICS_PERFORMANCE_REPORT.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_DIAGRAM.txt  AUDIT_SUMMARY.md  BROWSER_TEST_FINDINGS.md  BRUTAL_HONEST_FINAL_ASSESSMENT.md  CACHE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PLUGIN_SYSTEM_RESEARCH.md  CLEANUP_COMPLETE_SUMMARY.md  CLEANUP_QUICK_REFERENCE.md  CLEANUP_VERIFICATION.md  COMMAND_REFERENCE.md  COMPLETE_AUDIT_AND_CLEANUP_PLAN.md  COMPLETE_AUDIT_REPORT.md  COMPLETE_FILE_INVENTORY.md  COMPLETE_FUNCTIONAL_VALIDATION.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_SESSION_DELIVERY.md  COMPLETION_PLAN_V3.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS.md  (+227 more)
.claude/: test_shannon_example.py
.claude-plugin/: marketplace.json  plugin.json
.readme_sections/: section_1_3.md  section_4_5.md  section_6_7.md  section_8_10.md
.serena/: project.yml
.shannon_cache/: libraries_python_auth.json  libraries_python_authentication.json
Shannon-legacy/: README.md
agents/: ANALYZER.md  API_DESIGNER.md  ARCHITECT.md  CODE_REVIEWER.md  DATABASE_ARCHITECT.md  IMPLEMENTATION_WORKER.md  MENTOR.md  MOBILE_DEVELOPER.md  PERFORMANCE.md  PHASE_ARCHITECT.md  QA.md  REFACTORER.md  SPEC_ANALYZER.md  TECHNICAL_WRITER.md
commands/: analyze.md  brainstorm.md  check_mcps.md  checkpoint.md  discover_skills.md  do.md  exec.md  execute-plan.md  execute_plan.md  generate_instructions.md  health.md  init.md  memory.md  north_star.md  prime.md  reflect.md  restore.md  scaffold.md  sh_analyze.md  sh_check_mcps.md  sh_north_star.md  sh_reflect.md  sh_restore.md  sh_spec.md  sh_status.md  sh_test.md  spec.md  status.md  task.md  test.md  ultrathink.md  wave.md  write-plan.md  write_plan.md
core/: CONTEXT_MANAGEMENT.md  FORCED_READING_PROTOCOL.md  PROJECT_CUSTOM_INSTRUCTIONS.md  WAVE_ORCHESTRATION.md
dashboard/: FINAL_SESSION_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  index.html  package-lock.json  package.json  test-connection.html
docs/: API_REFERENCE.md  CACHE_INTEGRATION_GUIDE.md  CLEANUP_COMPLETE_FINAL.md  CONTINUATION_READY.md  (+52 more)
(+1208 files in other folders)
