[tool.poetry]
name = "shannon-cli"
version = "1.0.0"
description = "Shannon Framework - Standalone CLI Agent"
authors = ["Shannon Framework Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "shannon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.7.0"
pydantic = "^2.5.0"
aiofiles = "^23.2.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.1.8"

[tool.poetry.scripts]
shannon = "shannon.cli.commands:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "functional: functional tests (NO MOCKS)",
    "e2e: end-to-end tests",
    "expensive: tests that cost money (API calls)"
]
