[tool.poetry]
name = "shannon-cli"
version = "1.0.0"
description = "Shannon Framework - Standalone CLI Agent"
authors = ["Shannon Framework Team"]
packages = [{include = "shannon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
claude-agent-sdk = "^0.1.0"
click = "^8.1.7"
rich = "^13.7.0"
pydantic = "^2.5.0"
aiofiles = "^23.2.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.1.8"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shannon = "shannon.cli.commands:cli"
