[tool.poetry]
name = "shannon-cli"
version = "3.5.0"
description = "Shannon Framework - Standalone CLI Agent with V3 Live Metrics, Caching, and Context Management"
authors = ["Shannon Framework Team"]
packages = [{include = "shannon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
claude-agent-sdk = "^0.1.0"
click = "^8.1.7"
rich = "^13.7.0"
pydantic = "^2.5.0"
aiofiles = "^23.2.1"
python-dateutil = "^2.8.2"
httpx = "^0.27.0"
# V4.0 Dependencies (Skills Framework, Dashboard, Communication)
fastapi = "^0.109.0"
python-socketio = "^5.11.0"
pyyaml = "^6.0.1"
jsonschema = "^4.21.0"
networkx = "^3.2.1"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.9"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shannon = "shannon.cli.commands:cli"
